Fix: Resolve serverless function syntax errors and improve error handling - Aafrin

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,12 @@
       "dest": "index.js"
     }
   ],
-   "env": {
+  "functions": {
+    "index.js": {
+      "maxDuration": 30
+    }
+  },
+  "env": {
     "NODE_ENV": "production"
   }
 }
