fix: Update website URL to rosechemicals.in

--- a/.env
+++ b/.env
@@ -7,14 +7,14 @@ WHATSAPP_ACCESS_TOKEN="EAATGfZBpKC2UBQZAHyDA7OVn6WvF229ZBTSd9lImLc5f3qgzowu3lkKZ
 WHATSAPP_VERIFY_TOKEN="blue_panda_123"
 
 # Sarvam AI
-SARVAM_API_KEY="i2ybd_AkeyYYS6SIyNliGrlEo7XTndsk_k62"
+SARVAM_API_KEY="sk_r22ksff2_qs9gqdLIOyOKv4jL8bB7nrBo"
 
 # Database
 MONGODB_URI="mongodb+srv://rosechemicalsindia_db_user:KVitJBxzfo9VMim7@botcluster.7uhxxt7.mongodb.net/?retryWrites=true&w=majority&appName=botcluster"
 
 # Website Integration
-WEBSITE_API_URL=https://www.rosechemicals.co.in
-WEBSITE_URL=https://www.rosechemicals.co.in
+WEBSITE_API_URL=https://www.rosechemicals.in
+WEBSITE_URL=https://www.rosechemicals.in
 API_TIMEOUT=10000
 FRONTEND_URL=https://chatbot-wheat-chi-94.vercel.app/
 WHATSAPP_BUSINESS_NUMBER=916385260090
