--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "WhatsApp Bot with Sarvam AI integration",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node api/index.js"
     },
     "dependencies": {
         "axios": "^1.6.2",
